--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,18 @@
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
+			<!--德鲁伊的包-->
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>druid</artifactId>
+				<version>1.1.12</version>
+			</dependency>
+			<!--mybatis集成springboot-->
+			<dependency>
+				<groupId>org.mybatis.spring.boot</groupId>
+				<artifactId>mybatis-spring-boot-starter</artifactId>
+				<version>1.3.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
