--- a/mgrsite/pom.xml
+++ b/mgrsite/pom.xml
@@ -72,6 +72,13 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.7</version>
         </dependency>
+
+        <!--alibaba的easyExcel包-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.0.0-beta3</version>
+        </dependency>
     </dependencies>
 
     <build>
