--- a/mgrsite/pom.xml
+++ b/mgrsite/pom.xml
@@ -22,7 +22,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -79,42 +79,138 @@
             <artifactId>easyexcel</artifactId>
             <version>2.0.0-beta3</version>
         </dependency>
+        <!--页面支持的包-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!--springboot打包插件-->
+            <!--<plugin>-->
+                <!--<groupId>org.springframework.boot</groupId>-->
+                <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+            <!--</plugin>-->
+            <!--逆向生成工具依赖-->
+            <!--<plugin>-->
+                <!--<groupId>org.mybatis.generator</groupId>-->
+                <!--<artifactId>mybatis-generator-maven-plugin</artifactId>-->
+                <!--<version>1.3.7</version>-->
+                <!--<configuration>-->
+                    <!--&lt;!&ndash; mybatis-generator的配置文件，根据情况调整位置 &ndash;&gt;-->
+                    <!--<configurationFile>src/main/resources/generatorConfig.xml</configurationFile>-->
+                    <!--<verbose>true</verbose>-->
+                    <!--<overwrite>false</overwrite>-->
+                    <!--&lt;!&ndash;将我们的CLASSPATH的jar包包含到逆向生成中，这样自定义的MySQLCommentGenerator才能生效-->
+                    <!--通过Generator的main方法启动&ndash;&gt;-->
+                    <!--<includeCompileDependencies>true</includeCompileDependencies>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>Generate MyBatis Artifacts</id>-->
+                        <!--<goals>-->
+                            <!--<goal>generate</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+                <!--&lt;!&ndash;逆向生成工具依赖&ndash;&gt;-->
+                <!--<dependencies>-->
+                    <!--<dependency>-->
+                        <!--<groupId>mysql</groupId>-->
+                        <!--<artifactId>mysql-connector-java</artifactId>-->
+                        <!--<version>5.1.21</version>-->
+                    <!--</dependency>-->
+                <!--</dependencies>-->
+            <!--</plugin>-->
+            <!--集成前端页面的打包插件-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.7</version>
-                <configuration>
-                    <!-- mybatis-generator的配置文件，根据情况调整位置 -->
-                    <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
-                    <verbose>true</verbose>
-                    <overwrite>false</overwrite>
-                    <!--将我们的CLASSPATH的jar包包含到逆向生成中，这样自定义的MySQLCommentGenerator才能生效
-                    通过Generator的main方法启动-->
-                    <includeCompileDependencies>true</includeCompileDependencies>
-                </configuration>
+                <version>${spring.boot.version}</version>
+                <!--解决打包后，执行java -jar 命令，找不到主清单属性-->
                 <executions>
                     <execution>
-                        <id>Generate MyBatis Artifacts</id>
+                        <phase>package</phase>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>repackage</goal>
                         </goals>
                     </execution>
                 </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>5.1.21</version>
-                    </dependency>
-                </dependencies>
+            </plugin>
+            <!--clean插件-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>${maven.clean.version}</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>src/main/resources/static</directory>
+                        </fileset>
+                        <fileset>
+                            <directory>src/main/resources/templates</directory>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+            <!--资源插件，主要为了从前端项目里复制打包好的文件到springboot项目-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>${maven.resource.version}</version>
+                <executions>
+                    <execution>
+                        <id>copy static</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>src/main/resources/static</outputDirectory>
+                            <overwrite>true</overwrite>
+                            <resources>
+                                <resource>
+                                    <!--因为vue-cli打包的目录在项目的根目录，所以从这里复制-->
+                                    <!--这里包括static目录一起复制过来的原因是因为springboot默认的路径是/static所以编译的index.html中
+                                    引用的css文件加上了static前缀所以包括static一起复制过来，或者修改vue编译文件使其引用文件前面不加static
+                                    springboot挑战参照 https://blog.csdn.net/isea533/article/details/50412212 -->
+                                    <directory>${project.parent.basedir}/website/dist</directory>
+                                    <!--<includes>-->
+                                        <!--<include>css/</include>-->
+                                        <!--<include>img/</include>-->
+                                        <!--<include>js/</include>-->
+                                        <!--<include>favicon.ico</include>-->
+                                    <!--</includes>-->
+                                    <includes>
+                                        <include>static/</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy template</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>src/main/resources/templates</outputDirectory>
+                            <overwrite>true</overwrite>
+                            <resources>
+                                <resource>
+                                    <!--因为vue-cli打包的目录在项目的根目录，所以从这里复制-->
+                                    <directory>${project.parent.basedir}/website/dist</directory>
+                                    <includes>
+                                        <include>index.html</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
