--- a/mgrsite/src/main/resources/application.yml
+++ b/mgrsite/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
     url: jdbc:mysql:///trip?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
     password: admin
     username: root
+  thymeleaf:
+    prefix:
+      classpath: /templates
+    cache: false
