--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>mgrsite</module>
+        <module>website</module>
     </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
@@ -20,6 +21,13 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<maven.compiler.version>3.8.1</maven.compiler.version>
+		<java.source.version>1.8</java.source.version>
+		<java.target.version>1.8</java.target.version>
+		<file.encoding>UTF-8</file.encoding>
+		<spring.boot.version>2.1.7.RELEASE</spring.boot.version>
+		<maven.clean.version>3.1.0</maven.clean.version>
+		<maven.resource.version>3.1.0</maven.resource.version>
 	</properties>
 
 	<dependencies>
@@ -44,6 +52,17 @@
 
 	<build>
 		<plugins>
+			<!--集成前端打包插件-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.version}</version>
+				<configuration>
+					<source>${java.source.version}</source>
+					<target>${java.target.version}</target>
+					<encoding>${file.encoding}</encoding>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
