--- a/mgrsite/pom.xml
+++ b/mgrsite/pom.xml
@@ -61,17 +61,17 @@
 
         <!--mybatis根据表注释生成注释-->
         <!-- MySQL Connector -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.40</version>
-        </dependency>
-        <!-- MyBatis Generator -->
-        <dependency>
-            <groupId>org.mybatis.generator</groupId>
-            <artifactId>mybatis-generator-core</artifactId>
-            <version>1.3.7</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>mysql</groupId>-->
+            <!--<artifactId>mysql-connector-java</artifactId>-->
+            <!--<version>5.1.40</version>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; MyBatis Generator &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.mybatis.generator</groupId>-->
+            <!--<artifactId>mybatis-generator-core</artifactId>-->
+            <!--<version>1.3.7</version>-->
+        <!--</dependency>-->
 
         <!--alibaba的easyExcel包-->
         <dependency>
@@ -89,10 +89,10 @@
     <build>
         <plugins>
             <!--springboot打包插件-->
-            <!--<plugin>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <!--逆向生成工具依赖-->
             <!--<plugin>-->
                 <!--<groupId>org.mybatis.generator</groupId>-->
@@ -125,93 +125,93 @@
                 <!--</dependencies>-->
             <!--</plugin>-->
             <!--集成前端页面的打包插件-->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring.boot.version}</version>
-                <!--解决打包后，执行java -jar 命令，找不到主清单属性-->
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.springframework.boot</groupId>-->
+                <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+                <!--<version>${spring.boot.version}</version>-->
+                <!--&lt;!&ndash;解决打包后，执行java -jar 命令，找不到主清单属性&ndash;&gt;-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>repackage</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
             <!--clean插件-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>${maven.clean.version}</version>
-                <configuration>
-                    <filesets>
-                        <fileset>
-                            <directory>src/main/resources/static</directory>
-                        </fileset>
-                        <fileset>
-                            <directory>src/main/resources/templates</directory>
-                        </fileset>
-                    </filesets>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-clean-plugin</artifactId>-->
+                <!--<version>${maven.clean.version}</version>-->
+                <!--<configuration>-->
+                    <!--<filesets>-->
+                        <!--<fileset>-->
+                            <!--<directory>src/main/resources/static</directory>-->
+                        <!--</fileset>-->
+                        <!--<fileset>-->
+                            <!--<directory>src/main/resources/templates</directory>-->
+                        <!--</fileset>-->
+                    <!--</filesets>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
             <!--资源插件，主要为了从前端项目里复制打包好的文件到springboot项目-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>${maven.resource.version}</version>
-                <executions>
-                    <execution>
-                        <id>copy static</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>src/main/resources/static</outputDirectory>
-                            <overwrite>true</overwrite>
-                            <resources>
-                                <resource>
-                                    <!--因为vue-cli打包的目录在项目的根目录，所以从这里复制-->
-                                    <!--这里包括static目录一起复制过来的原因是因为springboot默认的路径是/static所以编译的index.html中
-                                    引用的css文件加上了static前缀所以包括static一起复制过来，或者修改vue编译文件使其引用文件前面不加static
-                                    springboot挑战参照 https://blog.csdn.net/isea533/article/details/50412212 -->
-                                    <directory>${project.parent.basedir}/website/dist</directory>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-resources-plugin</artifactId>-->
+                <!--<version>${maven.resource.version}</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>copy static</id>-->
+                        <!--<phase>generate-resources</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>copy-resources</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<outputDirectory>src/main/resources/static</outputDirectory>-->
+                            <!--<overwrite>true</overwrite>-->
+                            <!--<resources>-->
+                                <!--<resource>-->
+                                    <!--&lt;!&ndash;因为vue-cli打包的目录在项目的根目录，所以从这里复制&ndash;&gt;-->
+                                    <!--&lt;!&ndash;这里包括static目录一起复制过来的原因是因为springboot默认的路径是/static所以编译的index.html中-->
+                                    <!--引用的css文件加上了static前缀所以包括static一起复制过来，或者修改vue编译文件使其引用文件前面不加static-->
+                                    <!--springboot挑战参照 https://blog.csdn.net/isea533/article/details/50412212 &ndash;&gt;-->
+                                    <!--<directory>${project.parent.basedir}/website/dist</directory>-->
+                                    <!--&lt;!&ndash;<includes>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<include>css/</include>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<include>img/</include>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<include>js/</include>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<include>favicon.ico</include>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;</includes>&ndash;&gt;-->
                                     <!--<includes>-->
-                                        <!--<include>css/</include>-->
-                                        <!--<include>img/</include>-->
-                                        <!--<include>js/</include>-->
-                                        <!--<include>favicon.ico</include>-->
+                                        <!--<include>static/</include>-->
                                     <!--</includes>-->
-                                    <includes>
-                                        <include>static/</include>
-                                    </includes>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy template</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>src/main/resources/templates</outputDirectory>
-                            <overwrite>true</overwrite>
-                            <resources>
-                                <resource>
-                                    <!--因为vue-cli打包的目录在项目的根目录，所以从这里复制-->
-                                    <directory>${project.parent.basedir}/website/dist</directory>
-                                    <includes>
-                                        <include>index.html</include>
-                                    </includes>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+                                <!--</resource>-->
+                            <!--</resources>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--<execution>-->
+                        <!--<id>copy template</id>-->
+                        <!--<phase>generate-resources</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>copy-resources</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<outputDirectory>src/main/resources/templates</outputDirectory>-->
+                            <!--<overwrite>true</overwrite>-->
+                            <!--<resources>-->
+                                <!--<resource>-->
+                                    <!--&lt;!&ndash;因为vue-cli打包的目录在项目的根目录，所以从这里复制&ndash;&gt;-->
+                                    <!--<directory>${project.parent.basedir}/website/dist</directory>-->
+                                    <!--<includes>-->
+                                        <!--<include>index.html</include>-->
+                                    <!--</includes>-->
+                                <!--</resource>-->
+                            <!--</resources>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 </project>
