--- a/mgrsite/pom.xml
+++ b/mgrsite/pom.xml
@@ -61,17 +61,17 @@
 
         <!--mybatis根据表注释生成注释-->
         <!-- MySQL Connector -->
-        <!--<dependency>-->
-            <!--<groupId>mysql</groupId>-->
-            <!--<artifactId>mysql-connector-java</artifactId>-->
-            <!--<version>5.1.40</version>-->
-        <!--</dependency>-->
-        <!--&lt;!&ndash; MyBatis Generator &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.mybatis.generator</groupId>-->
-            <!--<artifactId>mybatis-generator-core</artifactId>-->
-            <!--<version>1.3.7</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.40</version>
+        </dependency>
+        <!-- MyBatis Generator -->
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.7</version>
+        </dependency>
 
         <!--alibaba的easyExcel包-->
         <dependency>
