--- a/pom.xml
+++ b/pom.xml
@@ -53,16 +53,16 @@
 	<build>
 		<plugins>
 			<!--集成前端打包插件-->
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-compiler-plugin</artifactId>-->
-				<!--<version>${maven.compiler.version}</version>-->
-				<!--<configuration>-->
-					<!--<source>${java.source.version}</source>-->
-					<!--<target>${java.target.version}</target>-->
-					<!--<encoding>${file.encoding}</encoding>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.version}</version>
+				<configuration>
+					<source>${java.source.version}</source>
+					<target>${java.target.version}</target>
+					<encoding>${file.encoding}</encoding>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
