--- a/mgrsite/pom.xml
+++ b/mgrsite/pom.xml
@@ -75,6 +75,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <!--jwt验证-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
 
         <!--  临时使用的包文件不用的时候可以注释-->
         <!--mybatis根据表注释生成注释-->
