--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
     </properties>
 
     <dependencies>
+        <!--sping validator 字段校验-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <!--fastjson-->
         <dependency>
             <groupId>com.alibaba</groupId>
