--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
       - name: 将 JAR 包部署到服务器
         uses: garygrossgarten/github-action-scp@release
         with:
-          local: target/github-actions-springboot-0.0.1-SNAPSHOT.jar
-          remote: blog.imzjw.cn/actions/github-actions-springboot.jar
+          local: target/blog-0.0.1-SNAPSHOT.jar
+          remote: /home/myblog/test/app.jar
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
@@ -47,7 +47,7 @@ jobs:
         uses: fifsky/ssh-action@master
         with:
           command: | # 命令中的 & 表示在后台运行进程
-            cd blog.imzjw.cn/actions/ && java -jar github-actions-springboot.jar &
+            cd /home/myblog/test/ && docker-compose up -d  &
           host: ${{ secrets.HOST }}
           user: ${{ secrets.SSH_USER }}
           pass: ${{ secrets.SSH_PASSWORD }}
